<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_plant"
            android:icon="@drawable/ic_leaf_home"
            android:title="@string/menu_plant" />
        <item
            android:id="@+id/nav_material"
            android:icon="@drawable/ic_gardening_tools"
            android:title="@string/menu_material" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_report"
            android:title="@string/menu_event" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_sign_out" />

    </group>


</menu>