<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ar.edu.ort.bmon.rootsapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_plant_detail"
            app:destination="@id/nav_plant_detail" />
        <action
            android:id="@+id/action_nav_home_to_createPlantFragment"
            app:destination="@id/createPlantFragment"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/nav_plant"
        android:name="ar.edu.ort.bmon.rootsapp.ui.plant.PlantFragment"
        android:label="@string/menu_plant"
        tools:layout="@layout/fragment_plant" />

    <fragment
        android:id="@+id/nav_plant_detail"
        android:name="ar.edu.ort.bmon.rootsapp.ui.plant.DetailFragment"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/nav_report"
        android:name="ar.edu.ort.bmon.rootsapp.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_sign_out"
        android:name="ar.edu.ort.bmon.rootsapp.ui.signout.SignoutFragment"
        android:label="@string/menu_sign_out"
        tools:layout="@layout/fragment_signout" />

    <fragment
        android:id="@+id/createPlantFragment"
        android:name="ar.edu.ort.bmon.rootsapp.ui.plant.CreatePlantFragment"
        android:label="@string/createPlantFragmentTitle"
        tools:layout="@layout/create_plant_fragment">
        <action
            android:id="@+id/action_createPlantFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit" />
    </fragment>

    <fragment
        android:id="@+id/createSpeciesFragment"
        android:name="ar.edu.ort.bmon.rootsapp.ui.plant.CreateSpeciesFragment"
        android:label="@string/createSpeciesFragmentTitle"
        tools:layout="@layout/create_species_fragment"
        />
</navigation>