<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plant.AddTaskFragment">

    <CheckBox
        android:id="@+id/check_task_fumigate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/task_fumigate"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFumigatePeriodicity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFumigatePeriodicity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/periodicity"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toEndOf="@+id/check_task_fumigate"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/check_task_prune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/task_prune"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPrunePeriodicity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_task_fumigate" />

    <EditText
        android:id="@+id/editTextPrunePeriodicity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/periodicity"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.300"
        app:layout_constraintStart_toEndOf="@+id/check_task_prune"
        app:layout_constraintTop_toBottomOf="@+id/editTextFumigatePeriodicity" />

    <CheckBox
        android:id="@+id/check_task_fertilize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/task_fertilize"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFertilizePeriodicity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_task_prune" />

    <EditText
        android:id="@+id/editTextFertilizePeriodicity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/periodicity"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toEndOf="@+id/check_task_fertilize"
        app:layout_constraintTop_toBottomOf="@+id/editTextPrunePeriodicity" />


</androidx.constraintlayout.widget.ConstraintLayout>